# caldy

./: LICENSE  README.md  manage.py  pyproject.toml
caldy/: admin.py  apps.py  asgi.py  config.py  mixins.py  settings.py  signals.py  urls.py  wsgi.py
caldy/forms/: __init__.py  accounts.py
caldy/migrations/: 0001_initial.py  0002_config.py  0002_organization_organizationmembership_and_more.py  0003_account.py  0003_seed_configs.py  0004_event_eventinstance_schedule_event_schedule_and_more.py  0005_booking.py  0006_booking_reference.py
caldy/models/: __init__.py  account.py  base.py  booking.py  config.py  event.py  organization.py  schedule.py  user.py
caldy/static/caldy/css/: main.css
caldy/templates/caldy/: base.html  home.html
caldy/templates/caldy/accounts/: login.html  register.html
caldy/templates/caldy/manage/: base.html
caldy/templates/caldy/manage/bookings/: booking-list.html
caldy/templates/caldy/manage/events/: event-list.html  event-new.html
caldy/templates/caldy/manage/schedules/: schedule-list.html  schedule-new.html
caldy/views/: accounts.py  home.py
caldy/views/manage/: bookings.py  events.py  schedules.py
