[project]
name = "caldy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0.4",
    "gunicorn>=25.3.0",
    "psycopg>=3.3.3",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
]
